Avoid menu overlap by putting logo on the left.

--- a/src/static/styles/main.less
+++ b/src/static/styles/main.less
@@ -34,7 +34,6 @@ body {
 
 	font-size: 48pt;
 
-	margin: 0 auto 0 auto;
 	padding: 0;
 
 	cursor: pointer;
